--- a/style.css
+++ b/style.css
@@ -1,5 +1,37 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: auto;
+  text-align: center;
+}
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+header {
+  text-align: center;
+}
+
+#featured-property figcaption{
+  font-size: smaller;
+}
+
+div {
+  margin: auto;
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
+
+header a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: purple;
+  color: white;
 }
